2012-04-28  Emil A Eklund  <eae@chromium.org>

        Add ENABLE_SUBPIXEL_LAYOUT controlling FractionalLayoutUnit denominator
        https://bugs.webkit.org/show_bug.cgi?id=85146

        Reviewed by Eric Seidel.

        Add a new flag for controlling the fixed point denominator in
        FractionalLayoutUnit. Controls whether the denominator is set to 60 or 1.
        Until we change the LayoutUnit typedef this change will have no effect.

        * wtf/Platform.h:

2012-04-29  Kent Tamura  <tkent@chromium.org>

        [Mac] Add LocalizedDateMac
        https://bugs.webkit.org/show_bug.cgi?id=85039

        Reviewed by Kentaro Hara.

        * wtf/DateMath.h:
        (WTF): Add monthFullName[]. It is useful to make fallback month
        names for calendar/date related features.

2012-04-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        [SOUP] Add a way to register custom uri schemes in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=84130

        Reviewed by Martin Robinson.

        Add GPtrArray template to be able to use GRefPtr with GPtrArrays.

        * wtf/gobject/GRefPtr.cpp:
        (WTF::refGPtr):
        (WTF):
        (WTF::derefGPtr):
        * wtf/gobject/GRefPtr.h:
        (WTF):
        * wtf/gobject/GTypedefs.h:

2012-04-26  Nico Weber  <thakis@chromium.org>

        Don't define WTF_COMPILER_SUPPORTS_CXX_NULLPTR twice when building with clang on windows.
        https://bugs.webkit.org/show_bug.cgi?id=85018

        Reviewed by Anders Carlsson.

        Clang sets _MSC_VER when compiling for a -pc-win32 target (just like it sets __GNUC__ on unix).
        As a result, WTF_COMPILER_SUPPORTS_CXX_NULLPTR gets currently set twice, once for clang and
        once for _MSC_VER. Guard the second instance with !COMPILER(CLANG). This matches the gcc code
        for WTF_COMPILER_SUPPORTS_CXX_NULLPTR in the same file.

        * wtf/Compiler.h:

2012-04-26  Antonio Gomes  <agomes@rim.com>
